<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="all"
        >
        <item
            android:id="@+id/fragment_agenda"
            android:title="@string/text_agenda"
            android:icon="@drawable/ic_agenda"
            android:iconTint="@color/light_blue"
            />
        <item
            android:id="@+id/collectedItemsFragment"
            android:title="@string/texttodos_os_itens"
            android:icon="@drawable/ic_pet"
            android:iconTint="@color/light_blue"
            />
        <item
            android:id="@+id/profit_fragment"
            android:title="@string/texttabela_de_lucros"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:iconTint="@color/green"
            />

        <item
            android:id="@+id/settingsFragment"
            android:title="Configurações"
            android:icon="@drawable/icone_settings"
            android:iconTint="@color/black"
            />
    </group>
</menu>