<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_itemInformation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:elevation="50dp"

    app:cardElevation="25dp"


    >
<!--    app:cardCornerRadius="15dp"-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardview_stroke_"
        >


        <TextView
            android:id="@+id/proximo_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/purple_500"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_house_number_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_house_number_card" />


        <TextView
            android:id="@+id/card_pet_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_pet"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@color/light_blue"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/pet_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_goneMarginTop="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_street"

            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintStart_toStartOf="@+id/pet_district"
            app:layout_constraintTop_toBottomOf="@+id/pet_district" />

        <TextView
            android:id="@+id/pet_district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_district"
            android:textSize="20sp"

            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/card_pet_name"
            app:layout_goneMarginStart="50dp"
            />

        <TextView
            android:id="@+id/text_house_number_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/text_house_number"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/pet_street"
            app:layout_constraintTop_toBottomOf="@id/pet_street"
            app:layout_goneMarginStart="5dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>